codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__custom_model_display_name_quick_picker.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select Model
  Pick a quick auto mode or browse all models.


  1. Auto Fast             Custom provider model
› 2. All models (current)  Choose a specific model and reasoning level (current:
                           GPT-5.6 Luna)

  enter select · esc back
